# EthOps-Evaluation

./: .gitignore
CloudSetup/: accounts.json  ganache-playbook.yml  inventory.txt  jenkins-playbook.yml
CloudTesting/Ganache/: accounts.json
CloudTesting/Ganache/blockchain/: !blockLogs!10  !blockLogs!101  !blockLogs!103  !blockLogs!105  !blockLogs!107  !blockLogs!109  !blockLogs!11  !blockLogs!111  !blockLogs!115  !blockLogs!117  !blockLogs!119  !blockLogs!12  !blockLogs!121  !blockLogs!123  !blockLogs!125  !blockLogs!129  !blockLogs!13  !blockLogs!131  !blockLogs!133  !blockLogs!135  !blockLogs!137  !blockLogs!138  !blockLogs!139  !blockLogs!14  !blockLogs!140  !blockLogs!141  !blockLogs!142  !blockLogs!143  !blockLogs!144  !blockLogs!145  !blockLogs!146  !blockLogs!147  !blockLogs!149  !blockLogs!15  !blockLogs!151  !blockLogs!155  !blockLogs!157  !blockLogs!16  !blockLogs!162  !blockLogs!168  (+35917 more)
CloudTesting/Main/jenkins/: secret.key  (+4 more)
CloudTesting/Voter1/jenkins/workspace/Voter1-Deployment/ContractBytecodeComparer/: pyproject.toml
GasCost/: gas_cost_output.txt  gas_cost_per_number_of_voters.py  latex_from_gas_cost_output.py  latex_output.txt
LocalTesting/jenkins/: config.xml  credentials.xml  identity.key.enc  jenkins.telemetry.Correlator.xml  secret.key
ProcessMining/: find_contract_addresses.py  generate_bcql.py  generate_bcql_time.py  generated_DevOpsRegistry.bcql  model_evaluation.py  node_output.txt  pyproject.toml  simple_smart_contract_v2.bpmn
ProcessMining/test_output/: log_DevOpsRegistry_all.xes
TestCoverage/coverage/: coverage-final.json  lcov.info
(+579 files in other folders)
