[tool.poetry]
name = "contractbytecodecomparer"
version = "0.1.0"
description = ""
authors = ["Tobias Petrich <tobias.petrich@campus.tu-berlin.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
web3 = "^5.31.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
